--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <title>Яндекс.Дом</title>
-    <link rel="preload" as="style" type="text/css" href="styles.css"  onload="this.rel='stylesheet'">
 
     <link rel="preload" as="font" href="assets/lato.woff2" type="font/woff2" crossorigin="anonymous">
 <!--    <script src="vendors/react-with-dom.js"></script>-->
@@ -13,6 +12,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet"  as="style" type="text/css" href="styles.css">
 </head>
 <body>
 
